k8s-support/np.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: hypejab
spec:
  podSelector:
    matchLabels:
      hypejab: "1"
  policyTypes:
  - Egress
